# ot-harjoitustyo

./: README.md
AudioProject/: .pylintrc  README.md  pyproject.toml  tasks.py
AudioProject/Dokumentaatio/: changelog.md  työaikakirjanpito.md  vaatimusmäärittely.md
AudioProject/src/: frequencyToNote.py  noteeditor.py
AudioProject/src/tests/: frequencyToNote_test.py
Dokumentaatio/: vaatimusmäärittely.md
lakarit/viikko2/maksukortti/: pyproject.toml
lakarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko1/: gitlog.txt
